--- a/Dagger2/app/src/main/res/layout/activity_auth.xml
+++ b/Dagger2/app/src/main/res/layout/activity_auth.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".AuthActivity">
+    tools:context=".ui.auth.AuthActivity">
 
     <ImageView
         android:id="@+id/login_logo"
