--- a/Dagger2/app/src/main/res/layout/activity_auth.xml
+++ b/Dagger2/app/src/main/res/layout/activity_auth.xml
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
-    tools:context=".ui.auth.AuthActivity">
+<layout>
 
-    <ImageView
-        android:id="@+id/login_logo"
-        android:layout_marginHorizontal="20dp"
-        android:contentDescription="@string/desc"
-        android:layout_marginTop="40dp"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.aws.dagger2.ui.auth.AuthViewModel" />
+    </data>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        tools:context=".ui.auth.AuthActivity">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/user_id_input"
-        android:hint="User ID"
-        android:textColor="#4C4C4C"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/login_logo"
+            android:layout_marginHorizontal="20dp"
+            android:contentDescription="@string/desc"
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
 
-    <Button
-        android:text="Login"
-        android:textColor="#202020"
-        android:id="@+id/login_button"
-        android:background="#C1C1C1"
-        android:elevation="4dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/user_id_input"
+            android:hint="User ID"
+            android:text="@={viewModel.userID}"
+            android:textColor="#4C4C4C"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-</LinearLayout>
+        <Button
+            android:text="Login"
+            android:textColor="#202020"
+            android:id="@+id/login_button"
+            android:background="#C1C1C1"
+            android:elevation="4dp"
+            android:onClick="@{() -> viewModel.attemptLogin()}"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+</layout>
