--- a/Dagger2/app/src/main/res/layout/activity_auth.xml
+++ b/Dagger2/app/src/main/res/layout/activity_auth.xml
@@ -27,6 +27,10 @@
             android:hint="User ID"
             android:text="@={viewModel.userID}"
             android:textColor="#4C4C4C"
+            android:lines="1"
+            android:inputType="numberSigned"
+            android:maxLength="2"
+            android:imeOptions="actionDone"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
